# youtube-download-api

./: LICENSE  NOTES.txt  README.md  app.albums.py  app.deserialise.py  app.featured-playlists.py  app.script.py  app.singles.py  pyproject.toml
tests/: test_utils.py
ytd_api/: __main__.py  api.py  clients.py  enums.py  hack.py  models.py  raw_enums.py  typing.py  utils.py
ytd_api/routers/: channel.py  search.py
