[tool.poetry]
name = "youtube-download-api"
version = "0.1.0"
description = "YouTube Download API"
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "youtube_download_api"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
mypy = "^1.4.1"
black = "^23.7.0"
pytest = "^7.4.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
